appointmed-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appointmed-api
  name: appointmed-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appointmed-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/api-network: "true"
        io.kompose.network/auth-api-network: "true"
        io.kompose.network/service-network: "true"
        io.kompose.service: appointmed-api
    spec:
      containers:
        - image: appointmed-api
          name: api
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
