appointmed-web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: appointmed-web-app
  name: appointmed-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: appointmed-web-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/service-network: "true"
        io.kompose.service: appointmed-web-app
    spec:
      containers:
        - image: appointmed-web-app
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
