keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/auth-api-network: "true"
        io.kompose.network/auth-network: "true"
        io.kompose.network/service-network: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - args:
            - start
            - --proxy=edge
            - --http-port=80
          image: quay.io/keycloak/keycloak:23.0.1
          name: keycloak
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /opt/keycloak/themes
              name: keycloak-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/centuri0n/appointmed/theme
          name: keycloak-hostpath0
status: {}
