mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/api-network: "true"
        io.kompose.service: mongodb
    spec:
      containers:
        - args:
            - --auth
          image: mongo
          name: mongodb-api
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/
              name: mongodb-hostpath0
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/centuri0n/appointmed/mongodb
          name: mongodb-hostpath0
status: {}
