postgres-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-keycloak
  name: postgres-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-keycloak
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/auth-network: "true"
        io.kompose.service: postgres-keycloak
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
            - name: POSTGRES_PASSWORD
            - name: POSTGRES_USER
          image: postgres:latest
          name: postgres-keycloak
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
